--- a/src/index.css
+++ b/src/index.css
@@ -193,8 +193,16 @@ button:hover {
   font-family: "Nanum Gothic";
   font-weight: 400;
   font-size: 35px;
-  right: 50px;
+  right: 120px;
   top: 15%;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+h3 {
+  font-family: "Nanum Gothic";
+  font-weight: 400;
+  font-size: 16px;
   text-transform: uppercase;
   text-align: center;
 }
